# ETS2-KeyBinder

./: README.md  app.py  pyproject.toml
PythonCommandLine(Old)/: app.py
Qt6/: .clang-format  .gitignore  BigKey.hpp  ETS2_KeyBinder.pro  README.md  appicon.rc  bracketrightwidget.cpp  bracketrightwidget.h  ets2keybinderwizard.cpp  ets2keybinderwizard.h  ets2keybinderwizard.ui  global.cpp  global.h  main.cpp  manuallybinder.cpp  manuallybinder.h  manuallybinder.ui  resource.qrc  showkeystate.cpp  showkeystate.h  showkeystate.ui
