[project]
name = "ets2-keybinder"
version = "0.1.0"
description = ""
authors = [
    {name = "m-RNA",email = "m-RNA@qq.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "ets2_keybinder", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
